<resources>
    <string name="app_name">SandwichRoulette</string>
    <string name="saucesStr">Sauces, Spreads &amp; Condiments:</string>
    <string name="aboutTitleStr">About SandwichRoulette</string>
    <string name="aboutTextStr">SandwichRoulette is an application designed for the indecisive. Like many 
people, my lunch has been delayed because of my inability to decide on what
to put in my sandwiches. This application, designed for Android-powered 
devices running 2.1 and higher, automates the ingredient choosing process. 
Creations can be saved and later versions will support sharing the 
particularly delicious ones.</string>
    <string name="veggieStr">Vegetables:</string>
    <string name="sammichNameTitleStr">Sandwich Name:</string>
    <string name="breadTxtStr">Bread:</string>
    <string name="cheeseTxtStr">Cheese:</string>
    <string name="breadPromptStr">Choose a Type of Bread</string>
    <string name="cheesePromptStr">Choose a Type of Cheese</string>
    <string name="listviewTitle">Sandwiches</string>
    <string name="basePromptStr">Choose a Sandwich Base</string>
    <string name="baseTxtStr">Base Sandwich:</string>
    <string name="app_tagline">The Premier Sandwich Randomizing Utility</string>
    <string name="app_copyright">Copyright \u00a9 2011–2012 Max Fierke</string>
    <string name="app_license_tag">Licensed under version 3 of the GNU GPL</string>
    <string name="splashImgDesc">The Sandwich Roulette Logo</string>
    <string name="app_version">version 1.5</string>
</resources>