<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
        android:id="@+id/aboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22dp" >
    </TextView>

    <TextView
        android:id="@+id/aboutSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_tagline"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14dp" >
    </TextView>
    
    <TextView
        android:id="@+id/aboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutSubHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12dp" />
    
    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutVersion"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/aboutTextStr"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/aboutCopyrightLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_copyright"
        android:textSize="14dp" >
    </TextView>

    <TextView
        android:id="@+id/aboutLicenseLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutCopyrightLine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_license_tag"
        android:textSize="12dp" >
    </TextView>

</RelativeLayout>